	  (initPointer): no warning for castable pointers
	* src/SDCCicode.c (operandOperation EQ_OP): handle literal pointers,
	  (getPtrType): removed
	  (geniCodeCast): removed strange hidden cast after cse fix
	  (geniCodeAddressOf): removed op->isaddr check for operandFromOperand
	* src/z80/gen.c (aopForRemat): synced with mcs51 for CAST,
	  (regMove): fixed warnings

2011-08-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug3397636.c:
	  Fixed bug #3397636.

2011-08-25 Borut Razem <borut.razem AT gmail.com>

	* src/pic14/pcodepeep.c, src/pic16/pcodepeep.c:
	  fixed name clash with mingw_w64: _DLL renamed to DLList
	* src/SDCCutil.c: added MINGW64 build environment detection
	* debugger/mcs51/simi.c, debugger/mcs51/cmd.c, debugger/mcs51/sdcdb.c,
	  debugger/mcs51/break.c:
	  fixed name clash with mingw_w64 objidl.h: undefine DATADIR
	* debugger/mcs51/sdcdb.c(escapeQuotes): expand buffer if necessary

2011-08-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed bug #3396441.

2011-08-17 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/lib/pic16/libdev/Makefile.in:
	  regenerated to include support for pic18f2xk22/pic18f4xk22 family

2011-08-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* doc/sdccman.lyx:
	  Redid documentation change, in LyX 1.6 format this time.

2011-08-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* doc/sdccman.lyx:
	  Reverted documentation change, to avoid LyX version incompability.

2011-08-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* doc/sdccman.lyx:
	  Document --reserve-regs-iy option and __smallc calling convention.

2011-08-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(decorateType, EQ_OP NE_OP): fixed floatFromVal bug on big
	  endian host for pointers

2011-08-14 Borut Razem <borut.razem AT gmail.com>
